Use Toolchains and Java 17 (#1366)